# pathTracing

./: CMakeLists.txt
configs/: config_all_diff.txt
include/: AABB.hpp  BRDF.hpp  Camera.hpp  Integrator.hpp  Interaction.hpp  Ray.hpp  config.hpp  geometry.hpp  light.hpp  objloader.hpp  scene.hpp  test_componet.hpp  utils.hpp
src/: AABB.cpp  BRDF.cpp  Camera.cpp  Config.cpp  Integrator.cpp  geometry.cpp  light.cpp  main.cpp  objloader.cpp  scene.cpp  test_components.cpp  utils.cpp
